add old recogniser and update pom